plugins {
    id 'org.springframework.boot' version '2.5.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.mozi'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2020.0.4")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws', version: '2.2.1.RELEASE', ext: 'pom'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.39'

    implementation 'org.springframework.security:spring-security-oauth2-jose:5.6.1'

    // 비속어 검색 (Aho-Corasick 알고리즘)
    implementation 'org.ahocorasick:ahocorasick:0.6.3'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:4.4.0'
    annotationProcessor 'javax.persistence:javax.persistence-api'
    annotationProcessor 'javax.annotation:javax.annotation-api'
    annotationProcessor 'com.querydsl:querydsl-apt:4.4.0:jpa'

    // image type detect
    implementation 'org.apache.tika:tika-core:2.3.0'

    implementation 'com.google.firebase:firebase-admin:9.0.0'

    //Swagger
    implementation 'io.springfox:springfox-boot-starter:3.0.0'

    implementation 'co.elastic.apm:apm-agent-api:1.34.0'
    implementation 'co.elastic.apm:apm-agent-attach:1.34.0'

    implementation 'io.sentry:sentry-spring-boot-starter:6.11.0'
    implementation 'io.sentry:sentry-logback:6.11.0'

    compileOnly 'org.projectlombok:lombok'
    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'mysql:mysql-connector-java'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

test {
    useJUnitPlatform()
}

//QueryDSL
sourceSets {
    main {
        java {
            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
        }
    }
}
